--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 								<li>
 									<a href="tel:+1-(514)-312-5678">
 										<i class="ri-phone-fill"></i>
-									+233-37-209-3697
+									050 593 4344
 									</a>
 								</li>
 							</ul>
@@ -38,7 +38,7 @@
                     <div class="container">
                         <div class="mobile-responsive-menu">
                             <div class="logo">
-                                <a href="index.html">
+                                <a href="/">
 									<img src="/images/logo.png" alt="logo" width="70" height="20">
 								</a>
                             </div>
@@ -46,7 +46,7 @@
 							<div class="others-options-for-mobile-devices">
 								<ul>
 									<li>
-										<a href="application.html" class="default-btn">
+										<a href="#1" class="default-btn">
 											Apply Now
 										</a>
 									</li>
@@ -64,7 +64,7 @@
                 <div class="desktop-nav">
                     <div class="container">
                         <nav class="navbar navbar-expand-md navbar-light">
-                            <a class="navbar-brand" href="index.html">
+                            <a class="navbar-brand" href="/">
                                 <img src="/images/logo.png" alt="logo">
                             </a>
 
