--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 				<div class="row align-items-center justify-content-center">
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-footer-widget bg-f9f5f1">
-							<a href="index.html" class="logo">
+							<a href="/" class="logo">
 								<img src="/images/white-logo.png" alt="Image">
 							</a>
 							<p>
@@ -39,19 +39,19 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="application.html">Application</a>
+									<a href="#1">Application</a>
 								</li>
 								<li>
-									<a href="faq.html">FAQ</a>
+									<a href="#1">FAQ</a>
 								</li>
 								<li>
-									<a href="alumni.html">Alumni</a>
+									<a href="#1">Alumni</a>
 								</li>
 								<li>
-									<a href="terms-conditions.html">Terms & conditions</a>
+									<a href="#1">Terms & conditions</a>
 								</li>
 								<li>
-									<a href="privacy-policy.html">Privacy policy</a>
+									<a href="#1">Privacy policy</a>
 								</li>
 							</ul>
 						</div>
@@ -63,19 +63,19 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="courses.html">Find a programme</a>
+									<a href="#1">Find a programme</a>
 								</li>
 								<li>
-									<a href="application.html">Admissions</a>
+									<a href="#1">Admissions</a>
 								</li>
 								<li>
-									<a href="our-professors.html">Scholarships</a>
+									<a href="#1">Scholarships</a>
 								</li>
 								<li>
-									<a href="campus-information.html">Study on campus</a>
+									<a href="#1">Study on campus</a>
 								</li>
 								<li>
-									<a href="tuition-fees.html">Fees and costs</a>
+									<a href="#1">Fees and costs</a>
 								</li>
 							</ul>
 						</div>
@@ -99,7 +99,7 @@
 								<li>
 									<i class="ri-phone-line"></i>
 									<span>Phone</span>
-									<a href="tel:+1-(514)-312-5678">+233-37-209-3697</a>
+									<a href="tel:+233505934344">050 593 4344</a>
 								</li>
 							</ul>
 						</div>
