--- a/views/websites/events.ejs
+++ b/views/websites/events.ejs
@@ -9,65 +9,146 @@
 
 		<!-- End Header Area -->
 
-        <div class="page-title-area bg-21">
+       
+		<!-- Search Modal -->
+		<div class="modal fade search-modal-area" id="exampleModalsrc">
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content">
+					<button type="button" data-bs-dismiss="modal" class="closer-btn">
+						<i class="ri-close-line"></i>
+					</button>
+
+					<div class="modal-body">
+						<form class="search-box">
+							<div class="search-input">
+								<input type="text" name="Search" placeholder="Search for..." class="form-control">
+
+								<button type="submit" class="search-btn">
+									<i class="ri-search-line"></i>
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Search Modal -->
+
+		<!-- Start Page Title Area -->
+		<div class="page-title-area bg-5">
 			<div class="container">
 				<div class="page-title-content">
-					<h2>About Us</h2>
+					<h2>Events</h2>
 
 					<ul>
 						<li>
-							<a href="/">
+							<a href="index.html">
 								Home 
 							</a>
 						</li>
 
-						<li class="active">About Us</li>
+						<li class="active">Events</li>
 					</ul>
 				</div>
 			</div>
 		</div>
-	
-        <section class="events-area events-area-style-two ptb-100">
+		<!-- End Page Title Area -->
+
+		<!-- Start Events Area -->
+		<section class="events-area events-area-style-two ptb-100">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-5">
 						<div class="events-timer mr-15">
 							<div class="event-img">
-                                <img src="../../images/banner/banner-bg-1.png" alt="Image">
+                                <img src="../../images/event-img.png" alt="Image">
                             </div>
 
-                        
+                            <span>Next Event</span>
+                            
+                            <div id="timer">
+                                <div id="days"></div>
+                                <div id="hours"></div>
+                                <div id="minutes"></div>
+                                <div id="seconds"></div>
+                            </div>
 
+                            <a href="#" class="default-btn">
+                                Book now
+                                <i class="ri-arrow-right-line"></i>
+                            </a>
                         </div>
 					</div>
 
 					<div class="col-lg-7">
 						<div class="events-content ml-15">
-							<span>Events</span>
+							
 							<h2>Upcoming events</h2>
 
 							<ul class="events-list">
 								<li>
 									<div class="events-date">
-										<span class="mb-2">01 July</span>
-										<span>2023</span>
+										<span class="mb-2">01 May</span>
+										<span>2021</span>
 									</div>
 
-									<span>Matriculation</span>
+									<span>Conference</span>
 									<h3>
-										<a href="">
-											Freshers Matriculation
+										<a href="event-details.html">
+											Universities admission conference 2021
 										</a>
 									</h3>
-									<p>We will have our freshers Matriculationon the 1 July 2023 at the business school auditorium</p>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-									<a href="#1" class="read-more">
+									<a href="event-details.html" class="read-more">
 										Find out more
 										<i class="ri-arrow-right-line"></i>
 									</a>
 								</li>
 
-								<!-- <div class="pagination-area">
+								
+
+								<li>
+									<div class="events-date">
+										<span class="mb-2">03 May</span>
+										<span>2021</span>
+									</div>
+
+									<span>Matriculation</span>
+									<h3>
+										<a href="event-details.html">
+											Undergraduate & Postgraduate Matriculation 2021
+										</a>
+									</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+									<a href="event-details.html" class="read-more">
+										Find out more
+										<i class="ri-arrow-right-line"></i>
+									</a>
+								</li>
+
+								<li>
+									<div class="events-date">
+										<span class="mb-2">25 Jun</span>
+										<span>2021</span>
+									</div>
+
+									<span>Awards</span>
+									<h3>
+										<a href="event-details.html">
+											Departmental Student awards 2023
+										</a>
+									</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+									<a href="event-details.html" class="read-more">
+										Find out more
+										<i class="ri-arrow-right-line"></i>
+									</a>
+								</li>
+								
+								<div class="pagination-area">
 									<span class="page-numbers current" aria-current="page">1</span>
 									<a href="#" class="page-numbers">2</a>
 									<a href="#" class="page-numbers">3</a>
@@ -75,14 +156,16 @@
 									<a href="#" class="next page-numbers">
 										<i class="ri-arrow-right-line"></i>
 									</a>
-								</div> -->
+								</div>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
+		<!-- End Events Area -->
+	
+       
 		<!-- Start Footer Area -->
 		<%- include('../partials/footer.ejs') %>
 
