--- a/views/dashboard/partials/sidebar.ejs
+++ b/views/dashboard/partials/sidebar.ejs
@@ -50,23 +50,23 @@
                         </li>
                         <li class="menu-title"><i class="ri-more-fill"></i> <span data-key="t-pages">Event Management</span></li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="/create-lecturer-profile" role="button" aria-expanded="false" aria-controls="sidebarApps">
+                            <a class="nav-link menu-link" href="/add-event" role="button" aria-expanded="false" aria-controls="sidebarApps">
                                 <i class=" ri-user-add-fill"></i> <span data-key="t-apps">Add Event</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="/lecturers-profile-list" role="button" aria-expanded="false" aria-controls="sidebarApps">
+                            <a class="nav-link menu-link" href="/event-list" role="button" aria-expanded="false" aria-controls="sidebarApps">
                                 <i class="ri-group-fill"></i> <span data-key="t-apps">Events List</span>
                             </a>
                         </li>
                         <li class="menu-title"><i class="ri-more-fill"></i> <span data-key="t-pages">News Management</span></li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="/create-lecturer-profile" role="button" aria-expanded="false" aria-controls="sidebarApps">
+                            <a class="nav-link menu-link" href="/add-news" role="button" aria-expanded="false" aria-controls="sidebarApps">
                                 <i class=" ri-user-add-fill"></i> <span data-key="t-apps">Add News</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="/lecturers-profile-list" role="button" aria-expanded="false" aria-controls="sidebarApps">
+                            <a class="nav-link menu-link" href="/news-list" role="button" aria-expanded="false" aria-controls="sidebarApps">
                                 <i class="ri-group-fill"></i> <span data-key="t-apps">News List</span>
                             </a>
                         </li>
