--- a/views/dashboard/pages/event-list.ejs
+++ b/views/dashboard/pages/event-list.ejs
@@ -33,7 +33,9 @@
                                         <div class="row g-4 mb-3">
                                             <div class="col-sm-auto">
                                                 <div>
-                                                    <button type="button" class="btn btn-success add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal"><i class="ri-add-line align-bottom me-1"></i> Add event</button>
+                                                    <a href="/add-event">
+                                                        <button type="button" class="btn btn-success add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal"><i class="ri-add-line align-bottom me-1"></i> Add event</button>
+                                                    </a>
                                                     <button class="btn btn-soft-danger" onClick="deleteMultiple()"><i class="ri-delete-bin-2-line"></i></button>
                                                 </div>
                                             </div>
@@ -48,6 +50,7 @@
                                         </div>
 
                                         <div class="table-responsive table-card mt-3 mb-1">
+                                            <% if (events.length > 0) { %>
                                             <table class="table align-middle table-nowrap" id="customerTable">
                                                 <thead class="table-light">
                                                     <tr >
@@ -65,6 +68,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody class="list form-check-all">
+                                                    <% events.forEach((event) => { %>
                                                     <tr>
                                                         <th scope="row">
                                                             <div class="form-check">
@@ -72,31 +76,32 @@
                                                             </div>
                                                         </th>
                                                         <td class="id" style="display:none;"><a href="javascript:void(0);" class="fw-medium link-primary">#VZ2101</a></td>
-                                                        <td >Undergraduates matriculation</td>
-                                                        <td >Academics</td>
-                                                        <td >Tamale</td>
+                                                        <td ><%= event.eventName %></td>
+                                                        <td ><%= event.category %></td>
+                                                        <td ><%= event.venue %></td>
 
-                                                        <td >23 June, 2023</td>
-                                                        <td >12:00pm</td>
+                                                        <td ><%= event.startDate %></td>
+                                                        <td ><%= event.time %></td>
 
                                                         
                                                         <td>
                                                             <div class="d-flex gap-2">
-                                                                <a href="profile.html" class="edit">
-                                                                    <button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#showModal">View</button>
+                                                                <a href="#" class="edit">
+                                                                    <button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="">View</button>
                                                                 </a>
-                                                                <a href="create-profile.html" class="edit">
+                                                                <a href="/update-event/<%= event._id %>" class="edit">
                                                                     <button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#showModal">Edit</button>
                                                                 </a>
                                                                 <div class="remove">
-                                                                    <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button>
+                                                                    <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal" onclick="confirmAndDelete('<%= event._id %>','<%= event.eventName %>')">Remove</button>
                                                                 </div>
                                                             </div>
                                                         </td>
                                                     </tr>
-                                                   
+                                                    <% }); %>
                                                 </tbody>
                                             </table>
+                                            <% } else { %>
                                             <div class="noresult" style="display: none">
                                                 <div class="text-center">
                                                     <lord-icon src="https://cdn.lordicon.com/msoeawqm.json" trigger="loop" colors="primary:#121331,secondary:#08a88a" style="width:75px;height:75px"></lord-icon>
@@ -104,6 +109,7 @@
                                                     <p class="text-muted mb-0">We've searched more than 150+ Orders We did not find any orders for you search.</p>
                                                 </div>
                                             </div>
+                                            <% } %>
                                         </div>
 
                                         <div class="d-flex justify-content-end">
@@ -147,5 +153,32 @@
 
 <!-- End Footer Area -->
 <%- include('../partials/scripts.ejs') %>
+
+<script>
+         function confirmAndDelete(lecturerId, name) {
+    // Ask for user confirmation
+    const confirmDelete = confirm(`Are you sure you want to delete this lecturer ${name}?`);
+
+    // If user confirms, proceed with the deletion
+    if (confirmDelete) {
+      // Make the AJAX DELETE request to delete the lecturer by ID
+      fetch(`/lecturers/${lecturerId}`, {
+        method: 'DELETE',
+      })
+        .then(response => {
+          if (response.ok) {
+            // Lecturer deleted successfully, reload the lecturer list route
+            window.location.href = '/lecturers-profile-list';
+          } else {
+            // Lecturer deletion failed, handle the error
+            console.error('Failed to delete lecturer');
+          }
+        })
+        .catch(error => {
+          console.error('Failed to delete lecturer:', error);
+        });
+    }
+  }
+</script>
 </body>
 </html>
